# comet

./: .gitignore  README.md  meson.build
include/analysis/: cost_info.hpp  cost_walker.hpp  data_movement.hpp  hyperrectangle.hpp  nest_analysis.hpp  node.hpp  node_cost.hpp  node_types.hpp
include/arch/: arch.hpp  arch_level.hpp  arch_spec.hpp  attribute.hpp  compute.hpp  compute_base.hpp  gemm_compute.hpp  inc_utils.hpp  intmac_compute.hpp  network.hpp  network_spec.hpp  orion_power_model.hpp  systolic_array.hpp  vsimd_compute.hpp  xbar_network.hpp
include/compound_config/: compound_config.hpp
include/mapping/: mapping.hpp  mapping_utils.hpp
include/problem/: dimsize.hpp  utils.hpp  workload.hpp
include/util/: comet_assert.h  factory.hpp  factory_registry.hpp  logger.hpp  simd_component_cost.hpp
src/: main.cpp  meson.build
src/analysis/: cost_walker.cpp  data_movement.cpp  hyperrectangle.cpp  meson.build  nest_analysis.cpp
src/arch/: arch.cpp  arch_cost.cpp  arch_level.cpp  arch_spec.cpp  collectives.cpp  compute.cpp  gemm_compute.cpp  intmac_compute.cpp  meson.build  network.cpp  network_spec.cpp  orion_power_model.cpp  systolic_array.cpp  vsimd_compute.cpp  xbar_network.cpp
src/compound_config/: compound_config.cpp  meson.build
src/mapping/: mapping.cpp  meson.build  parser.cpp
src/problem/: dimsize.cpp  meson.build  workload.cpp
src/util/: logger.cpp  meson.build
subprojects/: spdlog.wrap
test/example_run/: arch.yaml  const.yaml  mapping.yaml  problem.yaml  run.sh  run_multiple.sh
test/iterative_mapper/: arch.yaml  arch_cloud.yaml  (+9 more)
