network_sources = files('network.cpp', 'xbar_network.cpp')
compute_sources = files('compute.cpp', 'vsimd_compute.cpp', 'intmac_compute.cpp', 'gemm_compute.cpp', 'systolic_array.cpp')

sources += network_sources
sources += compute_sources
sources += files('arch_spec.cpp', 'arch_level.cpp', 'network_spec.cpp', 'arch_cost.cpp','arch.cpp', 'orion_power_model.cpp')
